--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,8 +12,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      - name: Create .env file
+        run: |
+          touch .env
+          ${{ secrets.editor-api-key }} >> .env
+          "https://gt-meble.pl" >> .env
+          ls -la
+          cat .env
       - name: Install and build
-        run: ls -la
         # run: | 
         #   npm ci
         #   npm run build --if-present
