--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          ${{ secrets.editor-api-key }} >> .env
-          "https://gt-meble.pl" >> .env
-          ls -la
-          cat .env
-      - name: Install and build
+          # ${{ secrets.editor-api-key }} >> .env
+          # "https://gt-meble.pl" >> .env
+          # ls -la
+          # cat .env
+      # - name: Install and build
         # run: | 
         #   npm ci
         #   npm run build --if-present
