--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          # ${{ secrets.editor-api-key }} >> .env
+          ${{ secrets.editor-api-key }} >> .env
           # "https://gt-meble.pl" >> .env
           # ls -la
           # cat .env
