--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          cat ${{ secrets.EDITOR_API_KEY }} > .env
-          cat ${{ vars.PRODUCTION_BACKEND_URL }} >> .env
+          echo ${{ secrets.EDITOR_API_KEY }} > .env
+          echo ${{ vars.PRODUCTION_BACKEND_URL }} >> .env
           ls -la
           cat .env
       # - name: Install and build
