--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,16 +15,37 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          echo ${{ secrets.EDITOR_API_KEY }} > .env
-          echo ${{ vars.PRODUCTION_BACKEND_URL }} >> .env
-          ls -la
+          echo REACT_APP_EDITOR_API_KEY=${{ secrets.EDITOR_API_KEY }} > .env
+          echo REACT_APP_API_CALL_URL_BASE=${{ vars.PRODUCTION_BACKEND_URL }} >> .env
           cat .env
-      # - name: Install and build
-        # run: | 
-        #   npm ci
-        #   npm run build --if-present
-      # - name: Upload build
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: build
-      #     path: ./build   
+      - name: Install and build
+        run: | 
+          npm ci
+          npm run build --if-present
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3.2.1-node20
+        with:
+          name: build
+          path: ./build   
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4.1.8
+        with: 
+          name: build
+      - name: Deploy to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with: 
+          username: ${{ secrets.SERVER_USERNAME}}
+          server: ${{ vars.SERVER }}
+          port: 10215
+          ssh_private_key: ${{secrets.SERVER_SSH_PRIVATE_KEY}} 
+          local_path: ./build/*
+          remote_path: /var/www/gt-meble/frontend/
+          sftp_only: true
+          delete_remote_files: true
+          
+          
+      
