--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install and build
         run: | 
           npm ci
-          npm run build --if-present
+          CI=false npm run build --if-present
       - name: Upload build artifact
         uses: actions/upload-artifact@v3.2.1-node20
         with:
