--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,14 +22,11 @@ jobs:
         run: | 
           npm ci
           CI=false npm run build --if-present
-          ls -la
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3.2.1-node20
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: ./build   
-      - name: TEst
-        run: ls -la
   deploy:
     runs-on: ubuntu-latest
     needs: build
