--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with: 
           name: build
+      - name: test
+        run : ls -la
       - name: Deploy to server
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with: 
