--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,17 +35,20 @@ jobs:
         with: 
           name: build
       - name: test
-        run : ls -la
-      - name: Deploy to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-        with: 
-          username: ${{ secrets.SERVER_USERNAME}}
-          server: ${{ vars.SERVER }}
-          port: 10215
-          ssh_private_key: ${{secrets.SERVER_SSH_PRIVATE_KEY}} 
-          local_path: ./build
-          remote_path: /var/www/gt-meble/frontend/
-          sftp_only: true
+        run : |
+          ls -la
+          echo ${{$GITHUB_WORKSPACE}}
+          ls -la /home/runner/work/GT-meble/GT-meble
+      # - name: Deploy to server
+      #   uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+      #   with: 
+      #     username: ${{ secrets.SERVER_USERNAME}}
+      #     server: ${{ vars.SERVER }}
+      #     port: 10215
+      #     ssh_private_key: ${{secrets.SERVER_SSH_PRIVATE_KEY}} 
+      #     local_path: ./build
+      #     remote_path: /var/www/gt-meble/frontend/
+      #     sftp_only: true
           
           
       
