--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,11 +34,13 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with: 
           name: build
+          path: ./
       - name: test
         run : |
           ls -la
-          echo ${{$GITHUB_WORKSPACE}}
+          echo ${{$GITHUB_WORKSPACE}} dupa
           ls -la /home/runner/work/GT-meble/GT-meble
+          echo test
       # - name: Deploy to server
       #   uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       #   with: 
