--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,7 +38,8 @@ jobs:
       - name: test
         run : |
           ls -la
-          echo ${{$GITHUB_WORKSPACE}} dupa
+          echo ${{$GITHUB_WORKSPACE}}
+          echo aaaaa
           ls -la /home/runner/work/GT-meble/GT-meble
           echo test
       # - name: Deploy to server
