--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,10 +31,9 @@ jobs:
     needs: build
     steps:
       - name: Download build artifact
-        uses: actions/download-artifact@v4.1.8
-        with: 
-          name: build
-          path: ./
+      - uses: actions/download-artifact@v4.1.8
+        # with: 
+          # name: build
       - name: test
         run : |
           ls -la
