--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,7 +31,7 @@ jobs:
     needs: build
     steps:
       - name: Download build artifact
-      - uses: actions/download-artifact@v4.1.8
+        uses: actions/download-artifact@v4.1.8
         # with: 
           # name: build
       - name: test
