--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -32,14 +32,12 @@ jobs:
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v4.1.8
-        # with: 
-          # name: build
+        with: 
+          name: build
       - name: test
         run : |
           ls -la
           echo aaaaa
-          ls -la /home/runner/work/GT-meble/GT-meble
-          echo test
       # - name: Deploy to server
       #   uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       #   with: 
