--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with: 
           name: build
+          path: /build
       - name: test
         run : |
           ls -la
