--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,21 +34,16 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with: 
           name: build
-          path: /build
-      - name: test
-        run : |
-          ls -la
-          echo aaaaa
-      # - name: Deploy to server
-      #   uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-      #   with: 
-      #     username: ${{ secrets.SERVER_USERNAME}}
-      #     server: ${{ vars.SERVER }}
-      #     port: 10215
-      #     ssh_private_key: ${{secrets.SERVER_SSH_PRIVATE_KEY}} 
-      #     local_path: ./build
-      #     remote_path: /var/www/gt-meble/frontend/
-      #     sftp_only: true
+      - name: Deploy to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with: 
+          username: ${{ secrets.SERVER_USERNAME}}
+          server: ${{ vars.SERVER }}
+          port: 10215
+          ssh_private_key: ${{secrets.SERVER_SSH_PRIVATE_KEY}} 
+          local_path: ./
+          remote_path: /var/www/gt-meble/frontend/
+          sftp_only: true
           
           
       
